@@ -18,186 +18,8 @@ module Gluon
     FORM_EXPORT = {}
     # :startdoc:
 
-    # = controller syntax
-    module Syntax
-      private
-
-      def gluon_path_filter(path_filter, &block)
-        PATH_FILTER[self] = {
-          :filter => path_filter,
-          :block => block
-        }
-        nil
-      end
-
-      def __gluon_export__(table, name, type, options)
-        name = name.to_sym
-        unless (public_method_defined? name) then
-          raise NoMethodError, "not defineid method `#{name}' of `#{self}'"
-        end
-        table[self] = {} unless (table.key? name)
-        table[self][name] = { :type => type, :options => options }
-        nil
-      end
-
-      def __gluon_export_params__(table, name, params={})
-        name = name.to_sym
-        table[self][name].update(params)
-        nil
-      end
-
-      def __gluon_view_export__(name, type, options)
-        __gluon_export__(VIEW_EXPORT, name, type, options)
-      end
-
-      def __gluon_form_export__(name, type, options)
-        __gluon_export__(VIEW_EXPORT, name, type, options)
-        __gluon_export__(FORM_EXPORT, name, type, options)
-      end
-
-      def __gluon_form_params__(name, params={})
-        __gluon_export_params__(VIEW_EXPORT, name, params)
-        __gluon_export_params__(FORM_EXPORT, name, params)
-      end
-
-      def gluon_value(name, options={})
-        __gluon_view_export__(name, :value, options)
-      end
-
-      def gluon_value_reader(name, options={})
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_value(name, options)
-      end
-
-      def gluon_cond(name, options={})
-        __gluon_view_export__(name, :cond, options)
-      end
-
-      def gluon_cond_reader(name, options={})
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_cond(name, options)
-      end
-
-      def gluon_foreach(name, options={})
-        __gluon_form_export__(name, :foreach, options)
-      end
-
-      def gluon_foreach_reader(name, options={})
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_foreach(name, options)
-      end
-
-      def gluon_link(name, options={})
-        __gluon_view_export__(name, :link, options)
-      end
-
-      def gluon_link_reader(name, options={})
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_link(name, options)
-      end
-
-      def gluon_action(name, options={})
-        __gluon_form_export__(name, :action, options)
-      end
-
-      def gluon_frame(name, options={})
-        __gluon_view_export__(name, :frame, options)
-      end
-
-      def gluon_frame_reader(name, options={})
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_frame(name, options)
-      end
-
-      def gluon_import(name, options={}, &block)
-        options = { :block => block }.merge(options)
-        __gluon_form_export__(name, :import, options)
-      end
-
-      def gluon_import_reader(name, options={}, &block)
-        class_eval{ attr_reader(name) } # why is class_eval necessary?
-        gluon_import(name, options, &block)
-      end
-
-      def gluon_submit(name, options={})
-        __gluon_form_export__(name, :submit, options)
-      end
-
-      def gluon_text(name, options={})
-        __gluon_form_export__(name, :text, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_text_accessor(name, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_text(name, options)
-      end
-
-      def gluon_passwd(name, options={})
-        __gluon_form_export__(name, :passwd, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_passwd_accessor(name, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_passwd(name, options)
-      end
-
-      def gluon_hidden(name, options={})
-        __gluon_form_export__(name, :hidden, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_hidden_accessor(name, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_hidden(name, options)
-      end
-
-      def gluon_checkbox(name, options={})
-        __gluon_form_export__(name, :checkbox, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_checkbox_accessor(name, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_checkbox(name, options)
-      end
-
-      def gluon_radio(name, list, options={})
-        options = { :list => list }.merge(options)
-        __gluon_form_export__(name, :radio, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_radio_accessor(name, list, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_radio(name, list, options)
-      end
-
-      def gluon_select(name, list, options={})
-        options = { :list => list }.merge(options)
-        __gluon_form_export__(name, :select, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_select_accessor(name, list, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_select(name, list, options)
-      end
-
-      def gluon_textarea(name, options={})
-        __gluon_form_export__(name, :textarea, options)
-        __gluon_form_params__(name, :writer => "#{name}=".to_sym)
-      end
-
-      def gluon_textarea_accessor(name, options={})
-        class_eval{ attr_accessor(name) } # why is class_eval necessary?
-        gluon_textarea(name, options)
-      end
-    end
-
     def self.included(module_or_class)
-      module_or_class.extend(Syntax)
+      module_or_class.extend(Component)
       super
     end
 
@@ -344,17 +166,183 @@ module Gluon
     end
   end
 
-  # = component controller
+  # = component
+  # defined controller syntax.
+  #
   module Component
-    def self.included(module_or_class)
-      module_or_class.extend(Controller::Syntax)
-      super
+    private
+
+    def gluon_path_filter(path_filter, &block)
+      Controller::PATH_FILTER[self] = {
+        :filter => path_filter,
+        :block => block
+      }
+      nil
     end
 
-    attr_writer :r
+    def __gluon_export__(table, name, type, options)
+      name = name.to_sym
+      unless (public_method_defined? name) then
+        raise NoMethodError, "not defineid method `#{name}' of `#{self}'"
+      end
+      table[self] = {} unless (table.key? name)
+      table[self][name] = { :type => type, :options => options }
+      nil
+    end
 
-    def page_view
-      @c.view_render(ERBView)
+    def __gluon_export_params__(table, name, params={})
+      name = name.to_sym
+      table[self][name].update(params)
+      nil
+    end
+
+    def __gluon_view_export__(name, type, options)
+      __gluon_export__(Controller::VIEW_EXPORT, name, type, options)
+    end
+
+    def __gluon_form_export__(name, type, options)
+      __gluon_export__(Controller::VIEW_EXPORT, name, type, options)
+      __gluon_export__(Controller::FORM_EXPORT, name, type, options)
+    end
+
+    def __gluon_form_params__(name, params={})
+      __gluon_export_params__(Controller::VIEW_EXPORT, name, params)
+      __gluon_export_params__(Controller::FORM_EXPORT, name, params)
+    end
+
+    def gluon_value(name, options={})
+      __gluon_view_export__(name, :value, options)
+    end
+
+    def gluon_value_reader(name, options={})
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_value(name, options)
+    end
+
+    def gluon_cond(name, options={})
+      __gluon_view_export__(name, :cond, options)
+    end
+
+    def gluon_cond_reader(name, options={})
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_cond(name, options)
+    end
+
+    def gluon_foreach(name, options={})
+      __gluon_form_export__(name, :foreach, options)
+    end
+
+    def gluon_foreach_reader(name, options={})
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_foreach(name, options)
+    end
+
+    def gluon_link(name, options={})
+      __gluon_view_export__(name, :link, options)
+    end
+
+    def gluon_link_reader(name, options={})
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_link(name, options)
+    end
+
+    def gluon_action(name, options={})
+      __gluon_form_export__(name, :action, options)
+    end
+
+    def gluon_frame(name, options={})
+      __gluon_view_export__(name, :frame, options)
+    end
+
+    def gluon_frame_reader(name, options={})
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_frame(name, options)
+    end
+
+    def gluon_import(name, options={}, &block)
+      options = { :block => block }.merge(options)
+      __gluon_form_export__(name, :import, options)
+    end
+
+    def gluon_import_reader(name, options={}, &block)
+      class_eval{ attr_reader(name) } # why is class_eval necessary?
+      gluon_import(name, options, &block)
+    end
+
+    def gluon_submit(name, options={})
+      __gluon_form_export__(name, :submit, options)
+    end
+
+    def gluon_text(name, options={})
+      __gluon_form_export__(name, :text, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_text_accessor(name, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_text(name, options)
+    end
+
+    def gluon_passwd(name, options={})
+      __gluon_form_export__(name, :passwd, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_passwd_accessor(name, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_passwd(name, options)
+    end
+
+    def gluon_hidden(name, options={})
+      __gluon_form_export__(name, :hidden, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_hidden_accessor(name, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_hidden(name, options)
+    end
+
+    def gluon_checkbox(name, options={})
+      __gluon_form_export__(name, :checkbox, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_checkbox_accessor(name, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_checkbox(name, options)
+    end
+
+    def gluon_radio(name, list, options={})
+      options = { :list => list }.merge(options)
+      __gluon_form_export__(name, :radio, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_radio_accessor(name, list, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_radio(name, list, options)
+    end
+
+    def gluon_select(name, list, options={})
+      options = { :list => list }.merge(options)
+      __gluon_form_export__(name, :select, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_select_accessor(name, list, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_select(name, list, options)
+    end
+
+    def gluon_textarea(name, options={})
+      __gluon_form_export__(name, :textarea, options)
+      __gluon_form_params__(name, :writer => "#{name}=".to_sym)
+    end
+
+    def gluon_textarea_accessor(name, options={})
+      class_eval{ attr_accessor(name) } # why is class_eval necessary?
+      gluon_textarea(name, options)
     end
   end
 end
